# SpeakyDoc

./: .dockerignore  Dockerfile  README.md
backend/: pyproject.toml
backend/app/: main.py  openai_service.py  whisper_service.py
frontend/speaky-doc-app/: README.md  package-lock.json  package.json
frontend/speaky-doc-app/src/routes/: +page.svelte
